Handle stat source when ranking players